--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,15 @@
+- update all links
 - Cycle count
     - separate
         - true physical implementation options
-            - ram access ns
             - copy stuff to vdp
+            - Pin out
         - required physical specs
-            - clocks per instruction
-            - clocks per frame
             - copy stuff to vdp (what can be changed)
         - or just don't touch stuff you shouldn't
             - so that multiple implementations work
-    - move physcal impl -> system timing
     - Bus access is interleaved between CPU & VDP
         - even clocks = CPU, odd clocks = VDP
-- Pin out
 
 Ideas
 -----
